# pocket-feeder

./: .gitignore  Cargo.toml  README.md  sources.example.yml
.github/workflows/: ci.yml  rust.yml  semver.yml
src/: config.rs  feed.rs  item.rs  main.rs  pocket_api.rs  pocket_auth.rs  pocket_item.rs  pocket_item_response.rs  source.rs
