[package]
name = "pocket-feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_yaml = "0.8.23"
serde_json = "1.0.79"
webbrowser = "0.6.0"
sentry = "0.25.0"
